--- a/duburcqa/launch_context_fixedsize_key/_modules/gstaichi/lang/impl.html
+++ b/duburcqa/launch_context_fixedsize_key/_modules/gstaichi/lang/impl.html
@@ -324,7 +324,7 @@
     <span class="n">KernelCxx</span><span class="p">,</span>
     <span class="n">Program</span><span class="p">,</span>
 <span class="p">)</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi._snode.fields_builder</span><span class="w"> </span><span class="kn">import</span> <span class="n">FieldsBuilder</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi._snode</span><span class="w"> </span><span class="kn">import</span> <span class="n">fields_builder</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang._ndarray</span><span class="w"> </span><span class="kn">import</span> <span class="n">ScalarNdarray</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang._ndrange</span><span class="w"> </span><span class="kn">import</span> <span class="n">GroupedNDRange</span><span class="p">,</span> <span class="n">_Ndrange</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.any_array</span><span class="w"> </span><span class="kn">import</span> <span class="n">AnyArray</span>
@@ -451,7 +451,7 @@
             <span class="s1">&#39;use &quot;for I in ti.grouped(x)&quot; to group all indices into a single vector I?&#39;</span>
         <span class="p">)</span>
     <span class="n">dbg_info</span> <span class="o">=</span> <span class="n">_ti_core</span><span class="o">.</span><span class="n">DebugInfo</span><span class="p">(</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">get_current_src_info</span><span class="p">())</span>
-    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">loop_range</span><span class="p">,</span> <span class="p">(</span><span class="n">AnyArray</span><span class="p">)):</span>
+    <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">loop_range</span><span class="p">,</span> <span class="n">AnyArray</span><span class="p">):</span>
         <span class="n">ast_builder</span><span class="o">.</span><span class="n">begin_frontend_struct_for_on_external_tensor</span><span class="p">(</span><span class="n">group</span><span class="p">,</span> <span class="n">loop_range</span><span class="o">.</span><span class="n">_loop_range</span><span class="p">(),</span> <span class="n">dbg_info</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">ast_builder</span><span class="o">.</span><span class="n">begin_frontend_struct_for_on_snode</span><span class="p">(</span><span class="n">group</span><span class="p">,</span> <span class="n">loop_range</span><span class="o">.</span><span class="n">_loop_range</span><span class="p">(),</span> <span class="n">dbg_info</span><span class="p">)</span>
@@ -762,7 +762,7 @@
 
         <span class="n">root</span><span class="o">.</span><span class="n">finalize</span><span class="p">(</span><span class="n">raise_warning</span><span class="o">=</span><span class="ow">not</span> <span class="n">is_first_call</span><span class="p">)</span>
         <span class="k">global</span> <span class="n">_root_fb</span>
-        <span class="n">_root_fb</span> <span class="o">=</span> <span class="n">FieldsBuilder</span><span class="p">()</span>
+        <span class="n">_root_fb</span> <span class="o">=</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">()</span>
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">_get_tb</span><span class="p">(</span><span class="n">_var</span><span class="p">):</span>
@@ -948,7 +948,7 @@
 <a class="viewcode-back" href="../../../autoapi/gstaichi/lang/impl/index.html#gstaichi.lang.impl.deactivate_all_snodes">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">deactivate_all_snodes</span><span class="p">():</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Recursively deactivate all SNodes.&quot;&quot;&quot;</span>
-    <span class="k">for</span> <span class="n">root_fb</span> <span class="ow">in</span> <span class="n">FieldsBuilder</span><span class="o">.</span><span class="n">_finalized_roots</span><span class="p">():</span>
+    <span class="k">for</span> <span class="n">root_fb</span> <span class="ow">in</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="o">.</span><span class="n">_finalized_roots</span><span class="p">():</span>
         <span class="n">root_fb</span><span class="o">.</span><span class="n">deactivate_all</span><span class="p">()</span></div>
 
 
@@ -959,19 +959,19 @@
     <span class="nd">@staticmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">parent</span><span class="p">(</span><span class="n">n</span><span class="o">=</span><span class="mi">1</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Same as :func:`gstaichi.SNode.parent`&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">FieldsBuilder</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">_root_fb</span><span class="o">.</span><span class="n">root</span><span class="o">.</span><span class="n">parent</span><span class="p">(</span><span class="n">n</span><span class="p">)</span>
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">_loop_range</span><span class="p">():</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Same as :func:`gstaichi.SNode.loop_range`&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">FieldsBuilder</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">_root_fb</span><span class="o">.</span><span class="n">root</span><span class="o">.</span><span class="n">_loop_range</span><span class="p">()</span>
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">_get_children</span><span class="p">():</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Same as :func:`gstaichi.SNode.get_children`&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">FieldsBuilder</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">_root_fb</span><span class="o">.</span><span class="n">root</span><span class="o">.</span><span class="n">_get_children</span><span class="p">()</span>
 
     <span class="c1"># TODO: Record all of the SNodeTrees that finalized under &#39;ti.root&#39;</span>
@@ -983,12 +983,12 @@
     <span class="nd">@property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">shape</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Same as :func:`gstaichi.SNode.shape`&quot;&quot;&quot;</span>
-        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">FieldsBuilder</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">_root_fb</span><span class="o">.</span><span class="n">root</span><span class="o">.</span><span class="n">shape</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">_id</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">FieldsBuilder</span><span class="p">)</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">_root_fb</span><span class="p">,</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">)</span>
         <span class="k">return</span> <span class="n">_root_fb</span><span class="o">.</span><span class="n">root</span><span class="o">.</span><span class="n">_id</span>
 
     <span class="k">def</span><span class="w"> </span><span class="fm">__getattr__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">item</span><span class="p">):</span>
