--- a/duburcqa/launch_context_fixedsize_key/_modules/gstaichi/linalg/matrixfree_cg.html
+++ b/duburcqa/launch_context_fixedsize_key/_modules/gstaichi/linalg/matrixfree_cg.html
@@ -316,7 +316,7 @@
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang</span><span class="w"> </span><span class="kn">import</span> <span class="n">misc</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.exception</span><span class="w"> </span><span class="kn">import</span> <span class="n">GsTaichiRuntimeError</span><span class="p">,</span> <span class="n">GsTaichiTypeError</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.impl</span><span class="w"> </span><span class="kn">import</span> <span class="n">FieldsBuilder</span><span class="p">,</span> <span class="n">field</span><span class="p">,</span> <span class="n">grouped</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.impl</span><span class="w"> </span><span class="kn">import</span> <span class="n">field</span><span class="p">,</span> <span class="n">fields_builder</span><span class="p">,</span> <span class="n">grouped</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.lang.kernel_impl</span><span class="w"> </span><span class="kn">import</span> <span class="n">data_oriented</span><span class="p">,</span> <span class="n">kernel</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">gstaichi.types</span><span class="w"> </span><span class="kn">import</span> <span class="n">primitive_types</span><span class="p">,</span> <span class="n">template</span>
 
@@ -367,7 +367,7 @@
         <span class="k">raise</span> <span class="n">GsTaichiRuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Dimension mismatch b.shape</span><span class="si">{</span><span class="n">b</span><span class="o">.</span><span class="n">shape</span><span class="si">}</span><span class="s2"> != x.shape</span><span class="si">{</span><span class="n">x</span><span class="o">.</span><span class="n">shape</span><span class="si">}</span><span class="s2">.&quot;</span><span class="p">)</span>
 
     <span class="n">size</span> <span class="o">=</span> <span class="n">b</span><span class="o">.</span><span class="n">shape</span>
-    <span class="n">vector_fields_builder</span> <span class="o">=</span> <span class="n">FieldsBuilder</span><span class="p">()</span>
+    <span class="n">vector_fields_builder</span> <span class="o">=</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">()</span>
     <span class="n">p</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">r</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">Ap</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
@@ -383,7 +383,7 @@
     <span class="n">vector_fields_builder</span><span class="o">.</span><span class="n">dense</span><span class="p">(</span><span class="n">axes</span><span class="p">,</span> <span class="n">size</span><span class="p">)</span><span class="o">.</span><span class="n">place</span><span class="p">(</span><span class="n">p</span><span class="p">,</span> <span class="n">r</span><span class="p">,</span> <span class="n">Ap</span><span class="p">,</span> <span class="n">Ax</span><span class="p">)</span>
     <span class="n">vector_fields_snode_tree</span> <span class="o">=</span> <span class="n">vector_fields_builder</span><span class="o">.</span><span class="n">finalize</span><span class="p">()</span>
 
-    <span class="n">scalar_builder</span> <span class="o">=</span> <span class="n">FieldsBuilder</span><span class="p">()</span>
+    <span class="n">scalar_builder</span> <span class="o">=</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">()</span>
     <span class="n">alpha</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">beta</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">scalar_builder</span><span class="o">.</span><span class="n">place</span><span class="p">(</span><span class="n">alpha</span><span class="p">,</span> <span class="n">beta</span><span class="p">)</span>
@@ -491,7 +491,7 @@
         <span class="k">raise</span> <span class="n">GsTaichiRuntimeError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Dimension mismatch b.shape</span><span class="si">{</span><span class="n">b</span><span class="o">.</span><span class="n">shape</span><span class="si">}</span><span class="s2"> != x.shape</span><span class="si">{</span><span class="n">x</span><span class="o">.</span><span class="n">shape</span><span class="si">}</span><span class="s2">.&quot;</span><span class="p">)</span>
 
     <span class="n">size</span> <span class="o">=</span> <span class="n">b</span><span class="o">.</span><span class="n">shape</span>
-    <span class="n">vector_fields_builder</span> <span class="o">=</span> <span class="n">FieldsBuilder</span><span class="p">()</span>
+    <span class="n">vector_fields_builder</span> <span class="o">=</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">()</span>
     <span class="n">p</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">p_hat</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">r</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
@@ -513,7 +513,7 @@
     <span class="n">vector_fields_builder</span><span class="o">.</span><span class="n">dense</span><span class="p">(</span><span class="n">axes</span><span class="p">,</span> <span class="n">size</span><span class="p">)</span><span class="o">.</span><span class="n">place</span><span class="p">(</span><span class="n">p</span><span class="p">,</span> <span class="n">p_hat</span><span class="p">,</span> <span class="n">r</span><span class="p">,</span> <span class="n">r_tld</span><span class="p">,</span> <span class="n">s</span><span class="p">,</span> <span class="n">s_hat</span><span class="p">,</span> <span class="n">t</span><span class="p">,</span> <span class="n">Ap</span><span class="p">,</span> <span class="n">Ax</span><span class="p">,</span> <span class="n">Ashat</span><span class="p">)</span>
     <span class="n">vector_fields_snode_tree</span> <span class="o">=</span> <span class="n">vector_fields_builder</span><span class="o">.</span><span class="n">finalize</span><span class="p">()</span>
 
-    <span class="n">scalar_builder</span> <span class="o">=</span> <span class="n">FieldsBuilder</span><span class="p">()</span>
+    <span class="n">scalar_builder</span> <span class="o">=</span> <span class="n">fields_builder</span><span class="o">.</span><span class="n">FieldsBuilder</span><span class="p">()</span>
     <span class="n">alpha</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">beta</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
     <span class="n">omega</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">solver_dtype</span><span class="p">)</span>
